# usr_ws_2020

./: .gitignore  .gitmodules  LICENSE  README.md
docker/: Dockerfile  docker_setup.sh
install/: local_setup.sh  setup.sh
install/YAML_CPP/share/YAML_CPP/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/digger_motor_node/lib/digger_motor_node/: digger_motor_controller
install/digger_motor_node/share/digger_motor_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joystick_ros2/lib/joystick_ros2/: joystick_ros2
install/joystick_ros2/share/joystick_ros2/: package.sh
install/maxon_motor_node/lib/maxon_motor_node/: maxon_drive_controller
launch/: teleop.py
log/: latest_build
scripts/: build_ws.bash  install_foxy_debian.sh  jetson_package_setup.sh  setup.sh
src/motion_controller/: CMakeLists.txt  LICENSE  package.xml
src/motion_controller/motion_controller_msgs/: CMakeLists.txt  package.xml
src/motion_controller/motion_controller_node/: CMakeLists.txt  package.xml
src/motion_controller/msg/: RoboclawCommand.msg
src/motion_controller/src/: DiggerControl.cpp  M5.cpp
src/motor_controllers/digger_motor_node/: package.xml  setup.cfg  setup.py
src/motor_controllers/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/motor_controllers/log/: latest_build
src/motor_controllers/maxon_motor_node/: setup.cfg  setup.py
src/motor_controllers/stepper_motor/: setup.cfg  setup.py
src/teleop_node/: setup.cfg  setup.py
src/teleop_node/teleop_node/: teleop.py
(+163 files in other folders)
